--- a/page1.html
+++ b/page1.html
@@ -2,9 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> camins de  mar </title>
+<link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div id="container">
+      <div class="title"> <h2>CAMINS DE MAR</h2></div>
+      <div class="mianphoto"></div>
+    </div>
 
   </body>
 </html>
