--- a/page1.html
+++ b/page1.html
@@ -7,8 +7,26 @@
   </head>
   <body>
     <div id="container">
-      <div class="title"> <h2>CAMINS DE MAR</h2></div>
-      <div class="mianphoto"></div>
+      <div class="title"> <h1>CAMINS DE MAR</h1></div>
+      <div class="text">Nosaltres som alumnes de Cinema en curs i com els nostres companys també hem estat
+treballant les migracions a l’aula. Quan vem saber que hi havia aquesta exposició al MhiC i
+vem començar a treballa Erri de Luca vem pensar que podriem filmar inspirats en els seus
+versos.</div>
+<div class="photomic"></div>
+<div class="poemt">Hem filmat molts plans on el mar i els trajectes estiguessin molt presents. Hem fet travellings perquè les migracions són viatges i d’aquesta manera podiem explicar millor l’emoció, la sensació de viatjar. I mars perquè del mar parlen molt poemes d’Elli de Luca, perquè el mar el tenim molt proper i expressa moltes coses, perquè tenim molt presents les rutes migrants pel mediterrani.
+També han sigut molt importants per nosaltres les hores del dia, les sortides de sol, els capvespres… l’hora màgica.
+</div>
+<div class="photopoem"></div>
+<div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
+</div>
+<div class="video">
+  <video autoplay muted controls>
+    <source src="video/telegram_video.mp4" type="video/mp4"/>
+  </video>
+
+
+</div>
+
     </div>
 
   </body>
