--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,7 @@
   <body>
     <div id="container">
       <div class="title"> <h1>CAMINS DE MAR</h1></div>
+      <div class="header"></div>
       <div class="text">Nosaltres som alumnes de Cinema en curs i com els nostres companys també hem estat
 treballant les migracions a l’aula. Quan vem saber que hi havia aquesta exposició al MhiC i
 vem començar a treballa Erri de Luca vem pensar que podriem filmar inspirats en els seus
@@ -20,10 +21,10 @@ També han sigut molt importants per nosaltres les hores del dia, les sortides d
 <div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
 </div>
 <div class="video">
-  <video autoplay muted controls>
+  <video autoplay muted height="250px" controls>
     <source src="video/telegram_video.mp4" type="video/mp4"/>
   </video>
-
+<div class="wave"></div>
 
 </div>
 
