--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
       <div class="title"> <h1>CAMINS DE MAR</h1></div>
       <div class="header"></div>
       <div class="homeicon">
-      <p> <a href="index.html"> <img src="images/home.png" alt="back to home page"></a>
+      <p> <a href="index.html"> <img src="images/home.png" height="50px"   alt="back to home page"></a>
       </div>
       <div class="text">Nosaltres som alumnes de Cinema en curs i com els nostres companys també hem estat
 treballant les migracions a l’aula. Quan vem saber que hi havia aquesta exposició al MhiC i
