--- a/page1xavi.html
+++ b/page1xavi.html
@@ -1,14 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title> camins de  mar </title>
-<link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/humayun.css">
   </head>
   <body>
     <div id="container">
-      <div class="title"> <h2>CAMINS DE MAR</h2></div>
-      <div class="mianphoto"></div>
+      <div class="title"> <h1>CARTOGRAFIES HUMANES</h1></div>
+      <div class="header"></div>
+      <div class="homeicon">
+      <p> <a href="index.html"> <img src="images/home.png" alt="back to home page"></a>
+      </div>
+      <div class="text">La nostra instal.lació té com a punt de partida les experiències migratòries que hem recollit fent entrevistes a persones del nostre entorn proper. Hem descobert que el nostre barri s’ha construït a partir d’història migrants, des d’avis que van venir d’altres llocs d’Espanya entre els anys 50-60, fins a l’actualitat on sobretot han arribat persones d'orígens més llunyans. </div>
+<div class="photomic"></div>
+<div class="poemt">Hem filmat molts plans on el mar i els trajectes estiguessin molt presents. Hem fet travellings perquè les migracions són viatges i d’aquesta manera podiem explicar millor l’emoció, la sensació de viatjar. I mars perquè del mar parlen molt poemes d’Elli de Luca, perquè el mar el tenim molt proper i expressa moltes coses, perquè tenim molt presents les rutes migrants pel mediterrani.
+També han sigut molt importants per nosaltres les hores del dia, les sortides de sol, els capvespres… l’hora màgica.
+</div>
+<div class="photopoem"></div>
+<div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
+</div>
+<div class="video">
+  <video autoplay muted height="250px" controls>
+    <source src="video/telegram_video.mp4" type="video/mp4"/>
+  </video> </div>
+
+
     </div>
 
   </body>
