--- a/viatge.html
+++ b/viatge.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/page2h.css">
+    <link rel="stylesheet" href="css/humayun.css">
 </head>
   <body>
   <div id="container">
