--- a/caminsdemar.html
+++ b/caminsdemar.html
@@ -25,9 +25,8 @@ També han sigut molt importants per nosaltres les hores del dia, les sortides d
 <div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
 </div>
 <div class="video">
-  <video autoplay muted height="250px" controls>
-    <source src="video/telegram_video.mp4" type="video/mp4"/>
-  </video> </div>
+  "<iframe height="240px" width="440px"src="https://www.youtube.com/embed/zhrHf40coc4?autoplay=1" </iframe>"/>
+   </div>
 
 
     </div>
