--- a/escales.html
+++ b/escales.html
@@ -13,9 +13,9 @@
       <div class="volver">
       <p> <a href="index.html"> <img src="images/home.png" height="50px"   alt="back to home page"></a></div>
       <div class="text1">Quan heu pujat i baixat aquesta escala, us haureu fixat que està plena de paraules, unes paraules que volen connectar l’obra del pintor amb els versos del poemari d’Erri de Luca, Solo Andata. Hem treballat els poemes i ens ha impactat la força i duresa de les seves paraules, com és forta i de vegades dura l’experiència de migrar. Mare, vento, onde, immensita… per arribar a l’obra de Piero Sacchetto.</div>
-      <div class="photomic"></div>
+      <div class="img1"></div>
       <div class="text2">Ens ha agradat treballar per fer una obra col.lectiva fora de l’institut i en concret crear una instal.lació aprofitant els espais quotidians del museu i dotar-los de sentit propi. Les escales de pujada al món del pintor.</div>
-      <div class="photopoem"></div>
+      <div class="img2"></div>
     </div>
   </body>
 </html>
