--- a/viatge.html
+++ b/viatge.html
@@ -18,14 +18,11 @@ imatge i per això també hem jugat amb colors de mar, de terres. Colors que cam
 barregen, es difuminen, igual que els viatges.
 </div>
 <div class="v2"></div>
-<div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
+<div class="maidert">Amb aquest projecte hem reflexionat molt sobre les migracions i l’impacte que tenen sobre
+les persones i els pobles. Hem treballat i trencat estereotips i hem après a crear a partir de
+les emocions i la paraula.
 </div>
-<div class="video">
-  "<iframe height="240px" width="440px"src="https://www.youtube.com/embed/zhrHf40coc4?autoplay=1" </iframe>"/>
-   </div>
-
-
->>>>>>> d323df358f74b223369844c88fe48fe81e36cf47
+<div class="Viatge"> </div>
     </div>
 
   </body>
