--- a/sisveus.html
+++ b/sisveus.html
@@ -19,7 +19,8 @@
       <div class="img2"></div>
 
       <audio controls>
-      <audio src="audio/audio.mp3" type="audio/mpeg"></audio>
+          <source src="audio/audio.mp3" type="audio/mpeg">
+      </audio>
 
     </div>
   </body>
