--- a/cartografieshumanes.html
+++ b/cartografieshumanes.html
@@ -12,15 +12,17 @@
       <div class="title"> <h1>CARTOGRAFIES HUMANES</h1></div>
       <div class="header"></div>
       <div class="homeicon">
-      <p> <a href="index.html"> <img src="images/home.png" alt="back to home page"></a>
+        <a href="index.html"><img src="images/home.png" alt="back to home page"></a>
       </div>
       <div class="text">La nostra instal.lació té com a punt de partida les experiències migratòries que hem recollit fent entrevistes a persones del nostre entorn proper. Hem descobert que el nostre barri s’ha construït a partir d’història migrants, des d’avis que van venir d’altres llocs d’Espanya entre els anys 50-60, fins a l’actualitat on sobretot han arribat persones d'orígens més llunyans.</div>
 <div class="photomic"></div>
-<div class="poemt">Hem filmat molts plans on el mar i els trajectes estiguessin molt presents. Hem fet travellings perquè les migracions són viatges i d’aquesta manera podiem explicar millor l’emoció, la sensació de viatjar. I mars perquè del mar parlen molt poemes d’Elli de Luca, perquè el mar el tenim molt proper i expressa moltes coses, perquè tenim molt presents les rutes migrants pel mediterrani.
+<div class="poemt">Les històries que ens han explicat, ens parlen de records de les terres d'origen, de jocs, de terra, de pobles, de família i també ens parlen de la terra d’arribada, de nous costums, d’enyors, d’esperances, de bons records. TOTES VAN PLENES D'EMOCIONS
 També han sigut molt importants per nosaltres les hores del dia, les sortides de sol, els capvespres… l’hora màgica.
 </div>
 <div class="photopoem"></div>
-<div class="maidert">Ens hem inspirat en alguns fragments com De tots els plans realitzats en vem fer una tria col.lectiva i ens vem posar a muntar-los amb la Maider, la nostra cineasta.
+<a href="index.html"> <img src="images/home2.png" alt=></a>
+<div class="maidert">Tot això vem pensar que ho havíem de representar mitjançant una cartografia en les parets del museu i se’ns va acudir representar les terres d’origen i destí amb formes no reconegudes. Dibuixar el contorn de continents amb cartró i posar-hi finestres que ens permetessin entrar en les històries de la gent.  De les histories en surten fils de colors que representen emocions que vivim quan fem aquests trajectes de només anada.
+
 </div>
 <div class="video">
   <video autoplay muted height="250px" controls>
